--- a/client/package.json
+++ b/client/package.json
@@ -8,40 +8,40 @@
   },
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.9.0",
-    "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
-    "d3": "^4.2.5",
-    "d3-request": "^1.0.2",
-    "expect": "^1.20.1",
-    "jquery": "^3.1.0",
-    "lodash": "^4.16.0",
-    "moment": "^2.15.1",
-    "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.8.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-datepicker": "^0.29.0",
-    "react-dom": "^15.1.0",
-    "react-file-input": "^0.2.5",
-    "react-redux": "^4.4.5",
+    "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
+    "d3": "^4.5.0",
+    "d3-request": "^1.0.3",
+    "expect": "^1.20.2",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
+    "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.5.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-datepicker": "^0.40.0",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-interceptor": "^1.1.1",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^2.8.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.11.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.16.1"
   },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
