--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-interceptor": "^1.1.1",
     "redux-logger": "^2.8.1",
