Added bulkupload feature

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "excel": "^0.1.7",
     "express": "~4.14.0",
     "express-fileupload": "0.0.6",
     "jade": "~1.11.0",
